Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sm_series/examples/cpp/vita49/gui/vrt_parser_gui/sm_api.h


        typedef unsigned char      uint8_t;
        typedef unsigned int       uint32_t;
        typedef unsigned long long uint64_t;
typedef enum SmStatus {
    smCalErr = -1003,
    smMeasErr = -1002,
    smErrorIOErr = -1001,
    smInvalidCalibrationFileErr = -200,
    smInvalidCenterFreqErr = -101,
    smInvalidIQDecimationErr = -100,
    smJESDErr = -54,
    smNetworkErr = -53,
    smFx3RunErr = -52,
    smMaxDevicesConnectedErr = -51,
    smFPGABootErr = -50,
    smBootErr = -49,
    smGpsNotLockedErr = -16,
    smVersionMismatchErr = -14,
    smAllocationErr = -13,
    smSyncErr = -11,
    smInvalidSweepPosition = -10,
    smInvalidConfigurationErr = -8,
    smConnectionLostErr = -6,
    smInvalidParameterErr = -5,
    smNullPtrErr = -4,
    smInvalidDeviceErr = -3,
    smDeviceNotFoundErr = -2,
    smNoError = 0,
    smSettingClamped = 1,
    smAdcOverflow = 2,
    smUncalData = 3,
    smTempDriftWarning = 4,
    smSpanExceedsPreselector = 5,
    smTempHighWarning = 6,
    smCpuLimited = 7,
    smUpdateAPI = 8,
    smInvalidCalData = 9,
} SmStatus;
typedef enum SmDataType {
    smDataType32fc,
    smDataType16sc
} SmDataType;
typedef enum SmSweepSpeed {
    smSweepSpeedAuto = 0,
    smSweepSpeedNormal = 1,
    smSweepSpeedFast = 2
} SmSweepSpeed;
typedef enum SmIQStreamSampleRate {
    smIQStreamSampleRateNative = 0,
    smIQStreamSampleRateLTE = 1,
} SmIQStreamSampleRate;
typedef enum SmDetector {
    smDetectorAverage = 0,
    smDetectorMinMax = 1
} SmDetector;
typedef enum SmScale {
    smScaleLog = 0,
    smScaleLin = 1,
    smScaleFullScale = 2
} SmScale;
typedef enum SmVideoUnits {
    smVideoLog = 0,
    smVideoVoltage = 1,
    smVideoPower = 2,
    smVideoSample = 3
} SmVideoUnits;
typedef enum SmWindowType {
    smWindowFlatTop = 0,
    smWindowNutall = 2,
    smWindowBlackman = 3,
    smWindowHamming = 4,
    smWindowGaussian6dB = 5,
    smWindowRect = 6
} SmWindowType;
typedef enum SmTriggerType {
    smTriggerTypeImm = 0,
    smTriggerTypeVideo = 1,
    smTriggerTypeExt = 2,
    smTriggerTypeFMT = 3
} SmTriggerType;
typedef enum SmTriggerEdge {
    smTriggerEdgeRising = 0,
    smTriggerEdgeFalling = 1
} SmTriggerEdge;
typedef enum SmBool {
    smFalse = 0,
    smTrue = 1
} SmBool;
typedef enum SmGPIOState {
    smGPIOStateOutput = 0,
    smGPIOStateInput = 1
} SmGPIOState;
typedef enum SmReference {
    smReferenceUseInternal = 0,
    smReferenceUseExternal = 1
} SmReference;
typedef enum SmAudioType {
    smAudioTypeAM = 0,
    smAudioTypeFM = 1,
    smAudioTypeUSB = 2,
    smAudioTypeLSB = 3,
    smAudioTypeCW = 4
} SmAudioType;
typedef enum SmGPSState {
    smGPSStateNotPresent = 0,
    smGPSStateLocked = 1,
    smGPSStateDisciplined = 2
} SmGPSState;
typedef struct SmGPIOStep {
    double freq;
    uint8_t mask;
} SmGPIOStep;
SM_API SmStatus smSetAttenuator(int device, int atten);
SM_API SmStatus smGetAttenuator(int device, int *atten);
SM_API SmStatus smSetRefLevel(int device, double refLevel);
SM_API SmStatus smGetRefLevel(int device, double *refLevel);
SM_API SmStatus smSetPreselector(int device, SmBool enabled);
SM_API SmStatus smGetPreselector(int device, SmBool *enabled);
SM_API SmStatus smSetGPIOState(int device, SmGPIOState lowerState, SmGPIOState upperState);
SM_API SmStatus smGetGPIOState(int device, SmGPIOState *lowerState, SmGPIOState *upperState);
SM_API SmStatus smWriteGPIOImm(int device, uint8_t data);
SM_API SmStatus smReadGPIOImm(int device, uint8_t *data);
SM_API SmStatus smWriteSPI(int device, uint32_t data, int byteCount);
SM_API SmStatus smSetGPIOSweepDisabled(int device);
SM_API SmStatus smSetGPIOSweep(int device, SmGPIOStep *steps, int stepCount);
SM_API SmStatus smSetGPIOSwitchingDisabled(int device);
SM_API SmStatus smSetGPIOSwitching(int device, uint8_t *gpio, uint32_t *counts, int gpioSteps);
SM_API SmStatus smSetExternalReference(int device, SmBool enabled);
SM_API SmStatus smGetExternalReference(int device, SmBool *enabled);
SM_API SmStatus smSetReference(int device, SmReference reference);
SM_API SmStatus smGetReference(int device, SmReference *reference);
SM_API SmStatus smSetGPSTimebaseUpdate(int device, SmBool enabled);
SM_API SmStatus smGetGPSTimebaseUpdate(int device, SmBool *enabled);
SM_API SmStatus smGetGPSHoldoverInfo(int device, SmBool *usingGPSHoldover, uint64_t *lastHoldoverTime);
SM_API SmStatus smGetGPSState(int device, SmGPSState *GPSState);
SM_API SmStatus smSetSweepSpeed(int device, SmSweepSpeed sweepSpeed);
SM_API SmStatus smSetSweepCenterSpan(int device, double centerFreqHz, double spanHz);
SM_API SmStatus smSetSweepStartStop(int device, double startFreqHz, double stopFreqHz);
SM_API SmStatus smSetSweepCoupling(int device, double rbw, double vbw, double sweepTime);
SM_API SmStatus smSetSweepDetector(int device, SmDetector detector, SmVideoUnits videoUnits);
SM_API SmStatus smSetSweepScale(int device, SmScale scale);
SM_API SmStatus smSetSweepWindow(int device, SmWindowType window);
SM_API SmStatus smSetSweepSpurReject(int device, SmBool spurRejectEnabled);
SM_API SmStatus smSetRealTimeCenterSpan(int device, double centerFreqHz, double spanHz);
SM_API SmStatus smSetRealTimeRBW(int device, double rbw);
SM_API SmStatus smSetRealTimeDetector(int device, SmDetector detector);
SM_API SmStatus smSetRealTimeScale(int device, SmScale scale, double frameRef, double frameScale);
SM_API SmStatus smSetRealTimeWindow(int device, SmWindowType window);
SM_API SmStatus smSetIQBaseSampleRate(int device, SmIQStreamSampleRate sampleRate);
SM_API SmStatus smSetIQDataType(int device, SmDataType dataType);
SM_API SmStatus smSetIQCenterFreq(int device, double centerFreqHz);
SM_API SmStatus smGetIQCenterFreq(int device, double *centerFreqHz);
SM_API SmStatus smSetIQSampleRate(int device, int decimation);
SM_API SmStatus smSetIQBandwidth(int device, SmBool enableSoftwareFilter, double bandwidth);
SM_API SmStatus smSetIQExtTriggerEdge(int device, SmTriggerEdge edge);
SM_API SmStatus smSetIQTriggerSentinel(double sentinelValue);
SM_API SmStatus smSetIQQueueSize(int device, float ms);
SM_API SmStatus smSetIQSweepListDataType(int device, SmDataType dataType);
SM_API SmStatus smSetIQSweepListCorrected(int device, SmBool corrected);
SM_API SmStatus smSetIQSweepListSteps(int device, int steps);
SM_API SmStatus smGetIQSweepListSteps(int device, int *steps);
SM_API SmStatus smSetIQSweepListFreq(int device, int step, double freq);
SM_API SmStatus smSetIQSweepListRef(int device, int step, double level);
SM_API SmStatus smSetIQSweepListAtten(int device, int step, int atten);
SM_API SmStatus smSetIQSweepListSampleCount(int device, int step, uint32_t samples);
SM_API SmStatus smSetSegIQDataType(int device, SmDataType dataType);
SM_API SmStatus smSetSegIQCenterFreq(int device, double centerFreqHz);
SM_API SmStatus smSetSegIQVideoTrigger(int device, double triggerLevel, SmTriggerEdge triggerEdge);
SM_API SmStatus smSetSegIQExtTrigger(int device, SmTriggerEdge extTriggerEdge);
SM_API SmStatus smSetSegIQFMTParams(int device,
                                    int fftSize,
                                    const double *frequencies,
                                    const double *ampls,
                                    int count);
SM_API SmStatus smSetSegIQSegmentCount(int device, int segmentCount);
SM_API SmStatus smSetSegIQSegment(int device,
                                  int segment,
                                  SmTriggerType triggerType,
                                  int preTrigger,
                                  int captureSize,
                                  double timeoutSeconds);
SM_API SmStatus smSetAudioCenterFreq(int device, double centerFreqHz);
SM_API SmStatus smSetAudioType(int device, SmAudioType audioType);
SM_API SmStatus smSetAudioFilters(int device,
                                  double ifBandwidth,
                                  double audioLpf,
                                  double audioHpf);
SM_API SmStatus smSetAudioFMDeemphasis(int device, double deemphasis);