Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sm_series/examples/csharp/sm_api.cs


    // Overrides reference level when set to non-auto values
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetAttenuator(int device, int atten);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetAttenuator(int device, ref int atten);

    // Uses this when attenuation is automatic
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetRefLevel(int device, double refLevel);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetRefLevel(int device, ref double refLevel);

    // Set preselector state for all measurement modes
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetPreselector(int device, SmBool enabled);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetPreselector(int device, ref SmBool enabled);

    // Configure IO routines
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetGPIOState(int device,
        SmGPIOState lowerState, SmGPIOState upperState);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetGPIOState(int device,
        ref SmGPIOState lowerState, ref SmGPIOState upperState);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smWriteGPIOImm(int device, byte data);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smReadGPIOImm(int device, ref byte data);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smWriteSPI(int device, uint data, int byteCount);
    // For standard sweeps only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetGPIOSweepDisabled(int device);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetGPIOSweep(int device, [In, Out] SmGPIOStep[] steps, int stepCount);
    // For IQ streaming only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetGPIOSwitchingDisabled(int device);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetGPIOSwitching(int device, byte[] gpio,
        uint[] counts, int gpioSteps);

    // Enable the external reference out port
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetExternalReference(int device, SmBool enabled);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetExternalReference(int device, ref SmBool enabled);
    // Specify whether to use the internal reference or reference on the ref in port
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetReference(int device, SmReference reference);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetReference(int device, ref SmReference reference);

    // Enable whether or not the API auto updates the timebase calibration
    // value when a valid GPS lock is acquired.
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetGPSTimebaseUpdate(int device, SmBool enabled);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetGPSTimebaseUpdate(int device, ref SmBool enabled);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetGPSHoldoverInfo(int device,
        ref SmBool usingGPSHoldover, ref ulong lastHoldoverTime);

    // Returns whether the GPS is locked, can be called anytime
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetGPSState(int device, ref SmGPSState GPSState);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepSpeed(int device, SmSweepSpeed sweepSpeed);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepCenterSpan(int device, double centerFreqHz,
        double spanHz);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepStartStop(int device, double startFreqHz,
        double stopFreqHz);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepCoupling(int device, double rbw, double vbw,
        double sweepTime);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepDetector(int device, SmDetector detector,
        SmVideoUnits videoUnits);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepScale(int device, SmScale scale);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepWindow(int device, SmWindowType window);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSweepSpurReject(int device, SmBool spurRejectEnabled);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetRealTimeCenterSpan(int device, double centerFreqHz,
        double spanHz);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetRealTimeRBW(int device, double rbw);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetRealTimeDetector(int device, SmDetector detector);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetRealTimeScale(int device, SmScale scale,
        double frameRef, double frameScale);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetRealTimeWindow(int device, SmWindowType window);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQBaseSampleRate(int device, SmIQStreamSampleRate sampleRate);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQDataType(int device, SmDataType dataType);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQCenterFreq(int device, double centerFreqHz);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetIQCenterFreq(int device, ref double centerFreqHz);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSampleRate(int device, int decimation);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQBandwidth(int device, SmBool enableSoftwareFilter,
        double bandwidth);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQExtTriggerEdge(int device, SmTriggerEdge edge);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQTriggerSentinel(double sentinelValue);
    // Please read the API manual before using this function.
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQQueueSize(int device, float ms);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSweepListDataType(int device, SmDataType dataType);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSweepListCorrected(int device, SmBool corrected);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSweepListSteps(int device, int steps);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetIQSweepListSteps(int device, ref int steps);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSweepListFreq(int device, int step, double freq);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSweepListRef(int device, int step, double level);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSweepListAtten(int device, int step, int atten);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQSweepListSampleCount(int device, int step, uint samples);

    // Segmented I/Q configuration, SM200B/SM435B only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSegIQDataType(int device, SmDataType dataType);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSegIQCenterFreq(int device, double centerFreqHz);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSegIQVideoTrigger(int device, double triggerLevel, SmTriggerEdge triggerEdge);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSegIQExtTrigger(int device, SmTriggerEdge extTriggerEdge);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSegIQFMTParams(int device, int fftSize, ref double frequencies, ref double ampls, int count);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSegIQSegmentCount(int device, int segmentCount);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetSegIQSegment(int device, int segment, SmTriggerType triggerType,
        int preTrigger, int captureSize, double timeoutSeconds);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetAudioCenterFreq(int device, double centerFreqHz);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetAudioType(int device, SmAudioType audioType);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetAudioFilters(int device, double ifBandwidth,
        double audioLpf, double audioHpf);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetAudioFMDeemphasis(int device, double deemphasis);
